--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <tittle>My webpage</tittle?
 </head> 
 <body>
-<h1>My Favrotie Things</h1> 
+<h1>My Favorite Things</h1> 
 <p>
 Raindrops on <em>Roses</em><br>
 Whiskers on <strong>kittens</strong>
