--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head> 
 <tittle>My webpage</tittle?
@@ -8,5 +9,9 @@
 Raindrops on <em>Roses</em><br>
 Whiskers on <strong>kittens</strong>
 </p>
+<button>Subscribe</button>
+  <br>
+  <head>Facebook<head>
+  <button>Log In</button>
 </body>
 </html>
