--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 Raindrops on <em>Roses</em><br>
 Whiskers on <strong>kittens</strong>
 </p>
+  <body> Subscribe to our Newsletter</body>
+  <br>
 <button>Subscribe</button>
   <br>
   <head>Facebook<head>
+    <br>
   <button>Log In</button>
 </body>
 </html>
