--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ Whiskers on <strong>kittens</strong>
   <br>
 <button>Subscribe</button>
   <br>
-  <head>Facebook<head>
+  <br>
+  <head>Facebook</head>
     <br>
   <button>Log In</button>
 </body>
