--- a/index.html
+++ b/index.html
@@ -18,4 +18,6 @@ Whiskers on <strong>kittens</strong>
     <br>
   <button>Log In</button>
 </body>
+  <body> <href="https://cheezhospitality.com">Explore Lebanon</a>
+  </body>
 </html>
