--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 <head> 
-<tittle>My webpage</tittle?
+<tittle>Joseph Codes</tittle?
 </head> 
 <body>
-<h1>My Favorite Things</h1> 
+<h1>Stays& Experience</h1> 
 <p>
-Raindrops on <em>Roses</em><br>
-Whiskers on <strong>kittens</strong>
+Best Stays in <em>Lebanon</em><br>
+Best Experience in<strong>Lebanon</strong>
 </p>
   <body> Subscribe to our Newsletter</body>
   <br>
