--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <tittle>Joseph Codes</tittle?
 </head> 
 <body>
-<h1>Stays& Experience</h1> 
+<h1>Stays & Experience</h1> 
 <p>
 Best Stays in <em>Lebanon</em><br>
 Best Experience in<strong>Lebanon</strong>
@@ -18,6 +18,6 @@ Best Experience in<strong>Lebanon</strong>
     <br>
   <button>Log In</button>
 </body>
-  <body> <href="https://cheezhospitality.com">Explore Lebanon</a>
+  <body> <a href="https://cheezhospitality.com">Explore Lebanon</a>
   </body>
 </html>
