--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Best Experience in<strong>Lebanon</strong>
     <br>
   <button>Log In</button>
 </body>
-  <body> <a href="https://cheezhospitality.com">Explore Lebanon</a>
+  <br>
+  <body> <a href="https://cheezhospitality.com"><emLExplore Lebanon</em></a>
   </body>
 </html>
