--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ Best Experience in<strong>Lebanon</strong>
   <button>Log In</button>
 </body>
   <br>
-  <body> <a href="https://cheezhospitality.com"><emLExplore Lebanon</em></a>
+  <body> <a href="https://cheezhospitality.com"><em>LExplore Lebanon</em></a>
   </body>
 </html>
