--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@ Best Experience in<strong>Lebanon</strong>
   <br>
   <head>Facebook</head>
     <br>
-  <button>Log In</button>
+  <button>Log In</button><br>
 </body>
-  <br>
-  <br>
-  <body> <a href="https://cheezhospitality.com"><em>Explore Lebanon</em></a>
+    <body> <a href="https://cheezhospitality.com"><em>Explore Lebanon</em></a>
   </body>
 </html>
